--- a/app/src/main/res/layout/settings_view.xml
+++ b/app/src/main/res/layout/settings_view.xml
@@ -11,6 +11,7 @@
         android:layout_marginEnd="347dp"
         android:text="SETTINGS"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
