--- a/app/src/main/res/layout/settings_view.xml
+++ b/app/src/main/res/layout/settings_view.xml
@@ -12,7 +12,8 @@
         android:id="@+id/recommendationIcon"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="12dp"
         android:background="@drawable/ic_round_question_answer_24px"
         android:gravity="center"
         android:textColor="@android:color/white"
@@ -40,7 +41,7 @@
         android:id="@+id/checkBox"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="28dp"
         app:layout_constraintBaseline_toBaselineOf="@id/movie_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
