--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -4,12 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:background="@color/colorPrimaryDark">
+    android:background="@color/white">
+
     <ImageView
         android:layout_width="180dp"
         android:layout_height="130dp"
-        android:layout_marginBottom="15dp"
         android:layout_marginTop="15dp"
-        android:background="@drawable/ic_android_black_24dp"/>
+        android:layout_marginBottom="15dp"
+        android:background="@drawable/logo" />
 
 </LinearLayout>
